commit 1.4 - Refactor core (Add WordAnalysisMode enum and refactor StatsPrinter methods)